Fix overflow

--- a/_less/_header.less
+++ b/_less/_header.less
@@ -1,5 +1,6 @@
 .main-header {
   border-top: 4px solid @clr-accent;
+  overflow: hidden;
   .logo {
     text-align: right;
     a {
@@ -24,7 +25,7 @@
         position: absolute;
         bottom: 30%;
         left: -3.5em;
-        right: 0;
+        right: 1em;
         transform: rotate(0.3deg);
         z-index: -1;
       }
